--- a/.codesandbox/tasks.json
+++ b/.codesandbox/tasks.json
@@ -1,12 +1,17 @@
 {
   // These tasks will run in order when initializing your CodeSandbox project.
-  "setupTasks": [],
+  "setupTasks": ["yarn install", "cd demo && yarn install"],
 
   // These tasks can be run from CodeSandbox. Running one will open a log in the app.
   "tasks": {
     "build": {
-      "name": "yarn preconstruct build",
-      "command": "yarn preconstruct build"
+      "name": "Build Package",
+      "command": "yarn build"
+    },
+    "Start Demo": {
+      "icon": "play",
+      "name": "Start Demo",
+      "command": "yarn demo"
     }
   }
 }
